# DuckDBCommunityExtensions

./: .gitignore  README.md  community_extensions.duckdb  pyproject.toml  requirements.txt  scrape.py
.github/workflows/: scrape.yml
